# witan-cli

./: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  main.go  proposal-mcp-single-exec.md  pyproject.toml  requirements-release.txt  setup.py
.claude/: .gitignore
client/: cache.go  cache_test.go  client.go  cookies.go  cookies_test.go  exec_test.go  files.go  files_test.go  gsheets_exec_test.go  gsheets_lint_test.go  gsheets_ws_test.go  pptx.go  pptx_test.go  read.go  retry_test.go  types.go  xlsx_ws.go  xlsx_ws_test.go
cmd/: auth.go  auth_login.go  auth_login_test.go  auth_logout.go  auth_status.go  auth_status_test.go  exec_shared.go  gsheets.go  interactive.go  interactive_test.go  lint_shared.go  locale_shared.go  output.go  pptx.go  pptx_exec.go  pptx_exec_test.go  pptx_exec_types.go  pptx_exec_types_test.go  pptx_lint.go  pptx_lint_test.go  pptx_render.go  pptx_render_test.go  read.go  render_shared.go  root.go  root_test.go  rpc_shared.go  sheets_authorize.go  sheets_authorize_helpers_test.go  sheets_connect.go  sheets_create.go  sheets_disconnect.go  sheets_exec.go  sheets_exec_test.go  sheets_helpers.go  sheets_helpers_test.go  sheets_lint.go  sheets_op_errors.go  sheets_op_errors_test.go  sheets_render.go  (+16 more)
config/: config.go  config_test.go
examples/: .env.example  AGENTS.md  README.md  TODO.md  format.ts  model-builder.ts  package.json  pnpm-lock.yaml  qna.ts  read.ts  setup.ts  tsconfig.json  verify.ts
internal/: address.go  address_test.go  diff.go  diff_test.go
node/: .gitignore  README.md  package-lock.json  package.json  (+2 more)
(+120 files in other folders)
