[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "witan"
dynamic = ["version"]
description = "Witan spreadsheet CLI and Python SDK for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Witan Labs" }]
urls = { Homepage = "https://github.com/witanlabs/witan-cli" }
dependencies = [
  "typing_extensions>=4.8",
]

[project.scripts]
witan = "witan:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "setuptools>=70.1",
  "wheel>=0.43",
]

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["witan", "witan.bin"]

[tool.setuptools.package-data]
witan = ["py.typed", "bin/witan", "bin/witan.exe"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["python/witan"]
